# ny-taxi-playground

./: .gitignore  README.md  entangled.toml  pyproject.toml
.entangled/: filedb.json
data/: .gitignore  trip-data-registry.txt
docs/: duckdb.md  index.md  pandas.md  xarray.md
src/: download_data.py  duckdb_and_parquet.py  pandas_and_dask.py  utils.py  xarray_program.py
